Сделал: сервис Auth(не полностью) поредактировал сущности и дто Доделать:  - Core  - Сделать интеграции  - Подвязать БД  - в front поменять url  - в gateway добавить всё!